@@ -12,6 +12,8 @@
 	(tree_ssa_forward_propagate_single_use_vars): Call
 	forward_propagate_into_cond for each COND_EXPR.
 
+	* tree-inline.c (INSNS_PER_STMT): Remove.
+
 2005-04-12  Richard Henderson  <rth@redhat.com>
 
 	* config/i386/i386.c (ix86_prepare_sse_fp_compare_args): Split ...
